Specl NEWS - User visible changes.

* Noteworthy changes in release ?.? (????-??-??) [?]


* Noteworthy changes in release 7 (2013-05-13) [stable]

** Bug fixes:

  - Add missing documentation for `matchers.Matcher.format_any_of`.

  - It's no longer possible to crash Specl using example descriptions
    that look like other types during lyaml parsing.

  - Specl 6 had a broken `should_contain` matcher, that would
    fail to match any expected substring with an active Lua
    pattern character in it (such as ?, * or % for example).

  - Add missing close parenthesis in non-verbose mode report
    formatter summaries with failing or pending expectations.

** Incompatible changes:

  - While not encouraged, one word descriptions are now supported,
    and are displayed correctly by the bundled formatters.


* Noteworthy changes in release 6 (2013-05-09) [stable]

** This release is a significant upgrade, with many new features,
   and, no doubt, some new bugs.

** New features:

  - Top level 'before' and 'after' functions are supported.

  - A proper, documented, API for adding custom matchers.

  - A new 'any_of' method for any matcher:

     expect (ctermid ()).should_match.any_of {"/.*tty.*", "/.*pts.*"}

  - You can `require "specl.shell"` from a spec file (usually in the
    initial top-level `before`) to get access to a shell Command
    constructor, a `spawn` executor function and several new matchers
    for querying the status of a shell command.

  - `package.path` is augmented, for the duration of each spec file,
    so that `require` can find and load other Lua files in the same
    directory.

  - Additional YAML "documents" from a spec file with '---' and '...'
    stream separators are no longer ignored; but treated as additional
    unnamed documents.

  - Report formatter displays inline expectation summaries for each
    example when not in verbose mode.

** Incompatible changes:

  - Documentation is now in Jekyll format markdown for easy website